fix overflow

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -236,6 +236,7 @@ span{
 
 .servicos {
   background: var(--second-bg-color);
+  overflow-y: hidden;
 }
 .heading{
   display: flex;
